# pdfmd

./: CLAUDE.md  README.md  pdf2md.spec  pdfmd.spec  pyproject.toml
.github/workflows/: publish.yml
src/pdf2md/: __main__.py  cli.py
