[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfmd"
version = "0.1.0"
description = "Convert PDF files to Markdown using pymupdf4llm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymupdf4llm",
]

[project.scripts]
pdf2md = "pdf2md.cli:main"
