[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfmd"
version = "0.2.0"
description = "Convert PDF files to Markdown using pymupdf4llm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymupdf4llm",
]

[project.scripts]
pdfmd = "pdfmd.cli:main"
